--- a/HiddenVilla_Server/Pages/Index.razor
+++ b/HiddenVilla_Server/Pages/Index.razor
@@ -1,7 +1,33 @@
 ﻿@page "/"
 
-<h1>Hello, world!</h1>
+@*<h1>Hello, world!</h1>
 
 Welcome to your new app.
 
-<SurveyPrompt Title="How is Blazor working for you?" />
+<SurveyPrompt Title="How is Blazor working for you?" />*@
+
+<h2 class="bg-light border p-2">
+    First Room
+</h2>
+
+Room: @Room.Name
+<br />
+Price: @Room.Price
+<br />
+
+<input type="number" @bind-value="@Room.Price" @bind-value:event="oninput"/> <br />
+<input type="checkbox" @bind-value="@Room.IsActive" checked="@(Room.IsActive ? "checked" : null)"/> &nbsp; Is Active <br />
+
+<span>This room is @(Room.IsActive ? "Room is Active": "Room is Inactive") </span>
+
+@code{
+    Model.BlazorRoom Room = new Model.BlazorRoom()
+    {
+        Id = 1,
+        Name = "Villa Suite",
+        IsActive = true,
+        Price = 499
+    };
+
+
+}
