--- a/HiddenVilla_Server/Pages/Index.razor
+++ b/HiddenVilla_Server/Pages/Index.razor
@@ -18,15 +18,31 @@ Price: @Room.Price
 <input type="number" @bind-value="@Room.Price" @bind-value:event="oninput"/> <br />
 <input type="checkbox" @bind-value="@Room.IsActive" checked="@(Room.IsActive ? "checked" : null)"/> &nbsp; Is Active <br />
 
-<span>This room is @(Room.IsActive ? "Room is Active": "Room is Inactive") </span>
+<span>This room is @(Room.IsActive ? "Room is Active": "Room is Inactive") </span> <br/>
+
+<select @bind="SelectedRoomProp">
+    @foreach (var prop in Room.RoomProps)
+    {
+        <option value="@prop.Name">@prop.Name</option>
+    }
+</select>
+
+<span>The Room Prop selected is : @SelectedRoomProp</span>
 
 @code{
+        string SelectedRoomProp = "";
+
     Model.BlazorRoom Room = new Model.BlazorRoom()
     {
         Id = 1,
         Name = "Villa Suite",
         IsActive = true,
-        Price = 499
+        Price = 499,
+        RoomProps = new List<Model.BlazorRoomProp>
+        {
+            new Model.BlazorRoomProp{Id=1, Name="Sq Ft", Value="100"},
+            new Model.BlazorRoomProp{Id=2, Name="Occupancy", Value="3"}
+        }
     };
 
 
