--- a/HiddenVilla_Server/Pages/LearnBlazor/DemoHotel.razor
+++ b/HiddenVilla_Server/Pages/LearnBlazor/DemoHotel.razor
@@ -1,12 +1,34 @@
 ﻿@page "/demohotel"
 @using Model
 
-<h2>We will display hotel rooms and amenities here!</h2>
+<h3>We will display hotel rooms and amenities here!</h3>
 
-<div>
-    <h1> Room List [USING COMPONENT]</h1>
+<div class="border p-2 mt-2" style="background-color:azure">
+    <h2 class="text-info"> Room List [USING COMPONENT]</h2>
+    <div class="row container">
+        @foreach (var room in RoomsList)
+        {
+            <div class="bg-light border p-2 col-5">
+                <h4 class="text-secondary">Room - @room.Id</h4>
 
+                @room.Name<br />
+                @room.Price.ToString("c")<br />
+                <input type="checkbox" @bind-value="room.IsActive" checked="@(room.IsActive? "checked":null)" /> &nbsp; Is Active<br />
+                <span>This room is @(room.IsActive?"Active": "Inactive")</span>
 
+                @if (room.IsActive)
+                {
+                    foreach (var roomProp in room.RoomProps)
+                    {
+                        <p>@roomProp.Name - @roomProp.Value</p>
+                    }
+                }
+
+                <input type="button" class="btn btn-danger" value="Delete"/>
+                <input type="button" class="btn btn-success" value="Edit"/>
+            </div>
+        }
+    </div>
 </div>
 
 @code{
