--- a/HiddenVilla_Server/Pages/LearnBlazor/LearnBlazorComponent/HotelAmenity.razor
+++ b/HiddenVilla_Server/Pages/LearnBlazor/LearnBlazorComponent/HotelAmenity.razor
@@ -4,7 +4,7 @@
     <h4 class="text-secondary">Amenities - @Amenity.Id</h4>
 
     @Amenity.Name<br />
-    @Amenity.Description
+    @Amenity.Description<br />
 </div>
 
 @code {
